# GstreamerWebRTCUnityPlugin

./: .gitattributes  .gitignore  README.md
Plugin/: .clang-format  CMakeLists.txt
Plugin/android/: Android.mk  Application.mk  build.sh
Plugin/src/: DebugLog.cpp  DebugLog.h  GstAVPipeline.cpp  GstAVPipeline.h  GstAVPipelineD3D11.cpp  GstAVPipelineD3D11.h  GstAVPipelineOpenGLES.cpp  GstAVPipelineOpenGLES.h  GstBasePipeline.cpp  GstBasePipeline.h  GstDataPipeline.cpp  GstDataPipeline.h  GstMicPipeline.cpp  GstMicPipeline.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_Metal.mm  RenderAPI_OpenGLCoreES.cpp  RenderAPI_Vulkan.cpp  RenderingPlugin.cpp
Plugin/src/Unity/: IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsMetal.h  IUnityInterface.h  IUnityRenderingExtensions.h  PlatformBase.h
Plugin/src/gl3w/: gl3w.c  gl3w.h  glcorearb.h
UnityProject/Assets/: Equi.mat  StereoSinglePassUndistortEquirectangular.shader
UnityProject/Assets/Plugins/Android/: AndroidManifest.xml
UnityProject/Assets/Scenes/: TestSignalling.unity  TestVR.unity  gstreamer_scene.unity
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
